# rusty-flac-shlonz

./: README.md  package-lock.json  package.json  svelte.config.js
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src/lib/: Greet.svelte  Thumb.svelte
