[package]
name = "rusty-flac-shlonz"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "rusty-flac-shlonz"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["devtools", "shell-open"] }
clap = { version = "4.0", features = ["derive"] }
flac = "0.5.0"
walkdir = "2.3.2"
metaflac = "0.2"
claxon = "0.4.3"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
diesel-dynamic-schema = "0.2.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
